--- a/index.html
+++ b/index.html
@@ -5,29 +5,35 @@
     <title>Headings and Outlining</title>
   </head>
   <body>
+    <header>
+      <h1>Mojo</h1>
+      <nav>
+        <h2>Site Navigation</h2>
+      </nav>
+    </header>
     <main>
       <section id="hero-unit">
         <header>
           <h1>About Mojo</h1>
-    </header>
+        </header>
         <!-- hero unit content goes here -->
       </section>
       <section id="tweets">
         <header>
           <h1>Tweets</h1>
-    </header>
+        </header>
         <!-- tweets go here -->
       </section>
       <section id="blog">
         <header>
           <h1>Blog</h1>
-    </header>
+        </header>
         <!-- recent blog post titles go here -->
       </section>
       <section id="newsletter">
         <header>
           <h1>Newsletter</h1>
-    </header>
+        </header>
         <!-- newsletter announcements go here -->
       </section>
     </main>
