--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="utf-8">
     <title>Headings and Outlining</title>
   </head>
+
   <body>
+
     <header>
       <h1>Mojo</h1>
       <nav>
         <h2>Site Navigation</h2>
       </nav>
     </header>
+
     <main>
       <section id="hero-unit">
         <header>
@@ -37,6 +40,13 @@
         <!-- newsletter announcements go here -->
       </section>
     </main>
+
+    <footer>
+      <nav>
+        <h2>Site Map</h2>
+      </nav>
+    </footer>
+    
   </body>
 </html>
 
